--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Login</title>
+    <title>Forgot Password</title>
 
     <!-- CSS -->
     <link href="../static/css/login.css" rel="stylesheet">
@@ -15,34 +15,17 @@
 <body>
 	<div class="loginbox">
 		<div class="glass">
-			<img src="../static/img/masjid.png" class="user">
-			<!-- <h2>Log in Here</h2> -->
-			<!-- <a href="#"><div class="btn1"></div></a>	
-			<a href="#"><div class="btn2"></div></a>
-			<hr class="hr-kiri">
-			<hr class="hr-kanan">
-			<div class="hr-login">
-				<span class="hr-login-text">
-					atau
-				</span>
-			</div> -->	
+			<!-- <img src="../static/img/masjid.png" class="user"> -->
+			<h2>Forgot your Password?</h2>
+			<p class="p-forgot1">Enter your email address below and we’ll send you instructions to reset your password.</p>
 			<form>
 				<div class="inputbox">
 					<input type="text" name="" placeholder="Email">
 					<span><i class="fa fa-envelope" aria-hidden="true"></i></span>
-				</div>
-				<div class="inputbox">
-					<input type="password" name="" placeholder="Password">
-					<span><i class="fa fa-lock" aria-hidden="true"></i></span>
-				</div>
-		    	<div class="checkbox">
-				    <label>
-				      <input type="checkbox"><p> Remember me</p>
-				    </label>
-				</div>
-				<p class="text-left"><a href="../templates/forgot_password.html">Forgot Password?</a></p>				    
-				<input type="submit" name="" value="Login" class="custom-btn">
+				</div>			    
+				<input type="submit" name="" value="Request Reset Link" class="custom-btn">
 			</form>
+			<p class="p-forgot2">If you don't remember your email or haven't received a password reset link, please contact <a href="../templates/email.html">saya@gmail.com</a></p>
 		</div>
 	</div>
 </body>
