--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="loginbox">
 		<div class="glass">
-			<img src="../static/img/masjid.png" class="user">
+			<img src="../static/img/humamiku.png" class="user">
 			<!-- <h2>Log in Here</h2> -->
 			<!-- <a href="#"><div class="btn1"></div></a>	
 			<a href="#"><div class="btn2"></div></a>
